--- a/translations/ru/info/task_description.html
+++ b/translations/ru/info/task_description.html
@@ -33,7 +33,7 @@ checkio([-21, -23, -69, -67, 1, 41, 97, 49, 27]) == 125</pre>
 
 <p class="for_info_only">
     <strong>Зачем это нужно: </strong>
-    Это классическая задач на оптимизацию.
+    Это классическая задача на оптимизацию.
     А также вы можете сравнить разные подходы, как рекурсия и динамическое программирование.
 </p>
 
